diesel_compile_tests/tests/fail/derive/bad_postgres_type.stderr
error: unexpected end of input, expected parentheses
 --> tests/fail/derive/bad_postgres_type.rs:6:23
  |
6 | #[diesel(postgres_type)]
  |                       ^
  |
  = help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`

error: expected `oid` and `array_oid` attribute or `name` attribute
  --> tests/fail/derive/bad_postgres_type.rs:10:24
   |
10 | #[diesel(postgres_type())]
   |                        ^
   |
   = help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`

error: expected parentheses
  --> tests/fail/derive/bad_postgres_type.rs:14:24
   |
14 | #[diesel(postgres_type = "foo")]
   |                        ^

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_postgres_type.rs:18:28
   |
18 | #[diesel(postgres_type(name))]
   |                            ^
   |
   = help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`

error: expected `=`
  --> tests/fail/derive/bad_postgres_type.rs:22:28
   |
22 | #[diesel(postgres_type(name()))]
   |                            ^

error: expected string literal
  --> tests/fail/derive/bad_postgres_type.rs:26:31
   |
26 | #[diesel(postgres_type(name = Foo))]
   |                               ^^^

error: unexpected `oid` when `name` is present
  --> tests/fail/derive/bad_postgres_type.rs:30:38
   |
30 | #[diesel(postgres_type(name = "foo", oid = 2, array_oid = 3))]
   |                                      ^^^
   |
   = help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`

error: unexpected `array_oid` when `name` is present
  --> tests/fail/derive/bad_postgres_type.rs:34:38
   |
34 | #[diesel(postgres_type(name = "foo", array_oid = 3))]
   |                                      ^^^^^^^^^
   |
   = help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`

error: expected `oid` and `array_oid` attribute or `name` attribute
  --> tests/fail/derive/bad_postgres_type.rs:38:31
   |
38 | #[diesel(postgres_type(oid = 2))]
   |                               ^
   |
   = help: The correct format looks like either `#[diesel(postgres_type(name = "foo", schema = "public"))]` or `#[diesel(postgres_type(oid = 37, array_oid = 54))]`

error: expected integer literal
  --> tests/fail/derive/bad_postgres_type.rs:42:45
   |
42 | #[diesel(postgres_type(oid = 1, array_oid = "1"))]
   |                                             ^^^

error: expected integer literal
  --> tests/fail/derive/bad_postgres_type.rs:46:30
   |
46 | #[diesel(postgres_type(oid = "1", array_oid = 1))]
   |                              ^^^

error: expected `name` to be also present
  --> tests/fail/derive/bad_postgres_type.rs:50:24
   |
50 | #[diesel(postgres_type(schema = "foo"))]
   |                        ^^^^^^
   |
   = help: make sure `name` is present, `#[diesel(postgres_type(name = "...", schema = "foo"))]`

error: unknown attribute, expected one of `oid`, `array_oid`, `name`, `schema`
  --> tests/fail/derive/bad_postgres_type.rs:54:24
   |
54 | #[diesel(postgres_type(what))]
   |                        ^^^^

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_postgres_type.rs:58:30
   |
58 | #[diesel(postgres_type(schema))]
   |                              ^
   |
   = help: The correct format looks like `#[diesel(postgres_type(name = "foo", schema = "public"))]`

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_postgres_type.rs:62:27
   |
62 | #[diesel(postgres_type(oid))]
   |                           ^
   |
   = help: The correct format looks like `#[diesel(postgres_type(oid = 37, array_oid = 54))]`

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_postgres_type.rs:66:33
   |
66 | #[diesel(postgres_type(array_oid))]
   |                                 ^
   |
   = help: The correct format looks like `#[diesel(postgres_type(oid = 37, array_oid = 54))]`
